from django.db import models
from django.contrib.auth.models import User


# --- SUBJECT MODEL ---
class Subject(models.Model):
    name = models.CharField(max_length=100)

    def __str__(self):
        return self.name


# --- STUDENT PROFILE ---
class Profile(models.Model):
    user = models.OneToOneField(User, on_delete=models.CASCADE, related_name='profile')

    first_name = models.CharField(max_length=100)
    middle_name = models.CharField(max_length=100, blank=True, null=True)
    last_name = models.CharField(max_length=100)

    email = models.EmailField(blank=True, null=True)  # ✅ ADD THIS

    section = models.CharField(max_length=50)
    school_year = models.CharField(max_length=20)
    is_2fa_enabled = models.BooleanField(default=False)

    address = models.CharField(max_length=255, blank=True, null=True)
    age = models.IntegerField(blank=True, null=True)
    birthday = models.DateField(blank=True, null=True)
    profile_picture = models.ImageField(upload_to='profile_pics/', blank=True, null=True)

    def __str__(self):

        return f"{self.last_name}, {self.first_name} ({self.section})"


# --- EXAM ---
class Exam(models.Model):
    # ⚠️ TEMPORARY NULLABLE (IMPORTANT FOR MIGRATION)
    subject = models.ForeignKey(
        Subject,
        on_delete=models.CASCADE,
        related_name='exams',
        null=True,
        blank=True
    )
    title = models.CharField(max_length=255)
    description = models.TextField()
    pass_mark = models.IntegerField(default=50)
    created_at = models.DateTimeField(auto_now_add=True)

    def __str__(self):
        subject_name = self.subject.name if self.subject else "No Subject"
        return f"{subject_name} - {self.title}"


# --- QUESTION ---
class Question(models.Model):
    TYPES = (
        ('MCQ', 'Multiple Choice'),
        ('ESSAY', 'Essay')
    )

    exam = models.ForeignKey(Exam, related_name='questions', on_delete=models.CASCADE)
    text = models.TextField()
    question_type = models.CharField(max_length=10, choices=TYPES, default='MCQ')
    required_keywords = models.TextField(blank=True, null=True)

    def __str__(self):
        return self.text


# --- OPTION ---
class Option(models.Model):
    question = models.ForeignKey(Question, related_name='options', on_delete=models.CASCADE)
    text = models.CharField(max_length=255)
    is_correct = models.BooleanField(default=False)

    def __str__(self):
        return self.text


# --- EXAM RESULT ---
class ExamResult(models.Model):
    user = models.ForeignKey(User, on_delete=models.CASCADE)
    exam = models.ForeignKey(Exam, on_delete=models.CASCADE)
    score = models.IntegerField()
    is_passed = models.BooleanField(default=False)
    section_at_time = models.CharField(max_length=50, null=True, blank=True)
    completed_at = models.DateTimeField(auto_now_add=True)

    class Meta:
        unique_together = ('user', 'exam')

    def __str__(self):
        return f"{self.user.username} - {self.exam.title}"

# --- EMAIL CHANGE VERIFICATION ---
class PendingEmailChange(models.Model):
    user = models.ForeignKey(User, on_delete=models.CASCADE)
    new_email = models.EmailField()
    code = models.CharField(max_length=6)
    created_at = models.DateTimeField(auto_now_add=True)

    def __str__(self):
        return f"{self.user.username} -> {self.new_email} ({self.code})"

# --- PASSWORD RESET ---
class PasswordResetCode(models.Model):
    user = models.ForeignKey(User, on_delete=models.CASCADE)
    code = models.CharField(max_length=6)
    created_at = models.DateTimeField(auto_now_add=True)

    def __str__(self):
        return f"Reset code for {self.user.username}"

# --- 2FA LOGIN APPROVAL ---
import uuid
class LoginApproval(models.Model):
    user = models.ForeignKey(User, on_delete=models.CASCADE)
    token = models.UUIDField(default=uuid.uuid4, editable=False, unique=True)
    code = models.CharField(max_length=6, default="")
    is_approved = models.BooleanField(default=False)

    created_at = models.DateTimeField(auto_now_add=True)

    def __str__(self):
        return f"Login for {self.user.username} (Approved: {self.is_approved})"

#Chatbot mga nibba
class KnowledgeBase(models.Model):
    title = models.CharField(max_length=255)
    text_content = models.TextField(blank=True, null=True)
    pdf_file = models.FileField(upload_to='pdfs/', null=True, blank=True)
    website_url = models.URLField(blank=True, null=True)
    created_at = models.DateTimeField(auto_now_add=True)

    def __str__(self):
        return self.title

class ChatMessage(models.Model):
    ROLE_CHOICES = (
        ('user', 'User'),
        ('assistant', 'Assistant'),
    )
    role = models.CharField(max_length=20, choices=ROLE_CHOICES)
    message = models.TextField()
    created_at = models.DateTimeField(auto_now_add=True)

    def __str__(self):
        return self.role